# n-Puzzle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: add_compile_options.cmake  add_exe.cmake  doxygen.cmake  fmt.cmake  gtest.cmake  initiate.cmake
examples/: CMakeLists.txt  example.cpp
make/: build.mk  checks.mk  combinations.mk  coverage.mk
src/: CMakeLists.txt  Puzzle.cpp  Puzzle.hpp
tests/: CMakeLists.txt  test_puzzle.cpp
tests/resources/: test_data.hpp
